# people-database

./: .dockerignore  .env.app  .env.db  .gitignore  README.md  compose.yaml  init.sql
app/: Dockerfile  people.py  people_init.py  pyproject.toml  sql.py
