[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["nad1991 <nadmyipea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
SQLAlchemy = "^2.0.29"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
